# hw-maya

./: README.md  codebook.toml  pyproject.toml
scripts/maya/: userSetup.py
src/hw_maya/: constants.py  util.py
src/hw_maya/menu/: __init__.py  scripts_menu.py
src/hw_maya/scripts/joint/: joint_axis_vis_off.py  joint_axis_vis_on.py  joint_create_roll.py  joint_orient_to_parent.py  joint_reset_draw_style.py  joint_zero_scale_orient.py
src/hw_maya/scripts/print/: object_type.py  selection.py
src/hw_maya/scripts/skeleton/: check_rot_is_zero.py
src/hw_maya/scripts/skin/: __init__.py  rename_clusters.py
src/hw_maya/scripts/util/: buffer_selection.py  circle_ctrl_at_selection.py  locator_at_selection.py  match_tr.py
